Java: GptUi: all UI code uses JavaFX thread